BUG FIX: Resolve log4j.properties file not being applied error